test/compile_errors/err_issue64_ref_vec_get_bad_index_type.w
//! expect-error: wrong argument type in call to 'Vec.get'

fn main:
    let items: Vec[i32] = Vec.new()
    let borrowed = &items
    borrowed.get("x")
